Updated contact page animation and fixed mobile view
Fixed mobile view overlap of about and skills section

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
         height: auto !important;
     }
 
+    [id=about-section] {
+        height: auto !important;
+    }
+
     .icon {
         visibility: hidden;
     }
